Destroy/close processes/streams, print called prog java version